--- a/Views/invAdj/Index.cshtml
+++ b/Views/invAdj/Index.cshtml
@@ -11,7 +11,13 @@
 <fieldset class="scheduler-border">
     <legend class="scheduler-border">Search</legend>
     <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Description" aria-label="Description" aria-describedby="basic-addon2" id="description">
+        <label for="date">Transaction Date:</label>
+        <input type="date" id="date" name="date">
+        <input type="text" class="form-control" placeholder="ProductName" aria-label="ProductName" aria-describedby="basic-addon2" id="productName">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button">Search</button>
+        </div>
+        <input type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode">
         <div class="input-group-append">
             <button class="btn btn-outline-secondary" type="button">Search</button>
         </div>
@@ -46,8 +52,9 @@
                    {
                         label: "Edit Actions",
                         name: "actions",
-                        width: 125,
+                        width: 100,
                         formatter: "actions",
+                        fixed:true,
                         formatoptions: {
                             keys: true,
                             editOptions: { },
@@ -55,14 +62,14 @@
                             delOptions: { url: 'Products/Delete' }
                         }
                     },
-
- 			       { label: 'Product Id',name: 'productId',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
-                   { label: 'Supplier',name: 'name',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
-                   { label: 'Product Name',name: 'description',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
-                   { label: 'Locations',name: 'description',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
-                   { label: 'Updated Stock',name: 'amount',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
-                   { label: 'Reasons',name: 'description',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
-                   { label: 'Notes',name: 'comments',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true}
+                   { label: 'Date',name: 'date',fixed:true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
+ 			       { label: 'Product Id',name: 'productId',fixed:true, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
+                   { label: 'Supplier',name: 'supplierName',fixed:true, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
+                   { label: 'Product Name',name: 'productName',fixed:true, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
+                   { label: 'Locations',name: 'inventoryLocation',fixed:true, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
+                   { label: 'Updated Stock',name: 'amount',fixed:true, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
+                   { label: 'Reasons',name: 'inventoryTxReason',fixed:true, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
+                   { label: 'Notes',name: 'comments',fixed:true, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true}
 
                  ], 
                viewrecords: true,
@@ -72,7 +79,7 @@
                editurl: 'Products/Update'
                //onSelectRow: editRow, // the javascript function to call on row click. will use to put the row in edit mode
 
-           }).hideCol("productId");
+           })
                
 
 
@@ -95,75 +102,51 @@
 
        $('#invAdj').setGridWidth(parseInt($(window).width()) - 20);
 
-       $("#description").on('change keyup paste', function () {
+       $("#productName").on('change keyup paste', function () {
            SearchByProductName();
        });
-        function getAllSelectOptions()
-        {
-        var sel = '<select>';
-      
-          sel +='<option value="">Select</option>';
-        $.getJSON('Products/CreateList', function(data) {
-        if (data != null) {
-            alert(data.length);
-            //construct string.  
-            //(or the server could return a string directly)
-             for (var i = 0; i < data.length; i++) {
-            sel += '<option value="' + data[i].value + '">' + data[i].text + '</option>';
-              //var sel = '';
-              //sel += data[i].value  + ':' + data[i].text  + ',';
-                         
-                 }
-                sel +="</select>";
-              // sel = sel.substring(0,sel.length-1);
-               //SupplierList= {sel};
-                 }
-                 alert(sel);
-                  console.log(sel);
-                return sel;
-            });
-         //var states = { '2': 'Carlsberg', '3': 'Moosehead Brewery', '15': 'Kokanee','16': 'mil'} ;
-         //console.log(states);
-         //alert(states.length);
-         //return states;
-        }
+       $("#date").on('change keyup paste', function () {
+           SearchByDate();
+       });
+
     function SearchByProductName()
     {
         //  Fetch the text from our <input> control
-        var searchString = $("#description").val();
-
+        var searchString = $("#productName").val();
+        
         //  Prepare to pass a new search filter to our jqGrid
         var f = { groupOp: "AND", rules: [] };
 
         //  Remember to change the following line to reflect the jqGrid column you want to search for your string in
         //  In this example, I'm searching through the UserName column.
 
-        f.rules.push({ field: "name", op: "cn", data: searchString });
+        f.rules.push({ field: "productName", op: "cn", data: searchString });
 
         var grid = $('#invAdj');
         grid[0].p.search = f.rules.length > 0;
+        console.log(grid[0].p.postData);
         $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
         grid.trigger("reloadGrid", [{ page: 1 }]);
     }
-        function getSequenceNumbers() {
-            //var SupplierList = { '2': 'Carlsberg', '3': 'Moosehead Brewery', '15': 'Kokanee','16': 'mil'} ;
-             //console.log(SupplierList);
-            //return SupplierList;
-          var SupplierList= {'2':'selectList'};
-               SupplierList[15]='konakee';
-         // var SupplierList;
-         $.getJSON('Products/CreateList', function(data) {
-        if (data != null) {
-            for (var i = 0; i < data.length; i++) {
-             SupplierList[data[i].value]=data[i].text;
-             alertg(data[i].value);
-              }
-            }//if
-           console.log(SupplierList);
-           return SupplierList;  
-            });
-        }
+        function SearchByDate()
+    {
+        //  Fetch the text from our <input> control
+        var searchString = $("#date").val();
+        
+        //  Prepare to pass a new search filter to our jqGrid
+        var f = { groupOp: "AND", rules: [] };
 
+        //  Remember to change the following line to reflect the jqGrid column you want to search for your string in
+        //  In this example, I'm searching through the UserName column.
+
+        f.rules.push({ field: "date", op: "cn", data: searchString });
+
+        var grid = $('#invAdj');
+        grid[0].p.search = f.rules.length > 0;
+        console.log(grid[0].p.postData);
+        $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
+        grid.trigger("reloadGrid", [{ page: 1 }]);
+    }
         
 </script>
 }
